# Movera

./: .dcokerignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY_AUDIT_REPORT.md  alembic.ini  components.json  compose.yaml  docker-compose.yml  entrypoint.sh  index.html  main.py  package-lock.json  package.json  pyproject.toml  spec.md  tsconfig.app.json  vite.config.ts  vitest.config.ts
.bmad-core/: install-manifest.yaml
.bmad-core/templates/: architecture-tmpl.yaml  brownfield-architecture-tmpl.yaml  brownfield-prd-tmpl.yaml  competitor-analysis-tmpl.yaml  front-end-architecture-tmpl.yaml  front-end-spec-tmpl.yaml  fullstack-architecture-tmpl.yaml  market-research-tmpl.yaml  prd-tmpl.yaml  story-tmpl.yaml
.bmad-core/workflows/: brownfield-fullstack.yaml  brownfield-service.yaml  brownfield-ui.yaml  greenfield-fullstack.yaml  greenfield-service.yaml  greenfield-ui.yaml
.bruno/: bruno.json
.bruno/Settings/: getSettings.bru  updateSettings.bru
.bruno/System/: folder.bru  ping.bru
.bruno/Tasks/: createTask.bru  deleteTask.bru  getTasks.bru  parsePreview.bru  regexPreview (mix).bru  regexPreview (with named group).bru  regexPreview (without named group).bru  updateTask.bru
.claude/: settings.local.json
.gemini/: styleguide.md
.github/workflows/: builder-merge.yaml  builder.yaml  tests.yaml  trivy_scan.yaml
.web-bundles/agents/: analyst.txt  architect.txt  bmad-master.txt  bmad-orchestrator.txt  pm.txt  po.txt  qa.txt  sm.txt  ux-expert.txt
.web-bundles/teams/: team-all.txt  team-fullstack.txt  team-ide-minimal.txt  team-no-ui.txt
api/: main.py
api/routers/: log.py  (+6 more)
app/: event.py  model.py  utils.py  worker.py
backend/: __init__.py  backend.py  database.py  dependencies.py  schemas.py
core/: __init__.py  database.py
database/: database.db
migration/: env.py
openspec/: config.yaml
qbittorrent/: in-complete
scripts/: Aria2  Deluge  Transmission  qBittorrent  rTorrent
specs/: README.md  backend-design.md  frontend-design.md  project-spec.md
src/: App.vue  main.js  main.ts  shims-css.d.ts  style.css  vite-env.d.ts
(+329 files in other folders)
