[project]
name = "movera"
version = "3.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.121.0",
    "loguru>=0.7.3",
    "parse>=1.20.2",
    "sqlalchemy>=2.0.44",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
